# open-elections-peru

./: README.rst  docker-compose.yml  pyproject.toml
project/: asgi.py  urls.py  wsgi.py
project/app/api/: __init__.py  apps.py  serializers.py  urls.py  views.py
project/app/elections/: __init__.py  admin.py  apps.py  managers.py  models.py
project/app/elections/management/commands/: import_candidates_cv.py  import_jne_data.py
project/app/elections/migrations/: 0001_initial.py
project/app/shared/: __init__.py
project/settings/: base.py  prod.py
