[tool.poetry]
name = "open_elections_peru"
version = "0.1.0"
description = "TODO: Write project short description."
authors = ["Reiner Marquez <rmaceissoft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.2"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"
django-model-utils = "^4.1.1"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
django_redis_cache = "^3.0.0"
djangorestframework = "^3.12.2"
python-jne-peru = {git = "https://github.com/rmaceissoft/python-jne-peru"}
drf-nested-routers = "^0.93.3"
django-filter = "^2.4.0"
drf-spectacular = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .+/migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
